--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-remaster-kit (1.8.2) buster; urgency=medium
+remaster-kit (1.8.3) buster; urgency=medium
 
   * Create sha256sum for ISO
 
  -- Leszek Lesner <leszek@zevenos.com>  Tue, 30 Jun 2020 13:15:04 +0200
+
+remaster-kit (1.8.2) stretch; urgency=medium
+
+  * Mount and unmount /run in chroot
+
+ -- Leszek Lesner <leszek@zevenos.com>  Fri, 23 Jun 2017 17:48:28 +0200
 
 remaster-kit (1.8.1) unstable; urgency=medium
 
